Implemented Occupency field to Buildings data grid

--- a/RealEstateDataViewer/RealEstateDataViewer/Views/MainWindow.xaml
+++ b/RealEstateDataViewer/RealEstateDataViewer/Views/MainWindow.xaml
@@ -52,6 +52,11 @@
                     Width="auto"
                     Binding="{Binding Path=BuildingArea}">
                 </DataGridTextColumn>
+                <DataGridTextColumn 
+                    Header="Occupancy" 
+                    Width="auto"
+                    Binding="{Binding Path=Occupancy}">
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         <DataGrid 
