Stage-5: Implemented displaying leases for each suite under row details

--- a/RealEstateDataViewer/RealEstateDataViewer/Views/MainWindow.xaml
+++ b/RealEstateDataViewer/RealEstateDataViewer/Views/MainWindow.xaml
@@ -77,6 +77,11 @@
             Grid.Row="1" 
             Padding="10 10 10 10"
             ItemsSource="{Binding Path=SuitesList}">
+            <DataGrid.RowDetailsTemplate>
+                <DataTemplate>
+                    <DataGrid ItemsSource="{Binding Path=LeasesList}"></DataGrid>
+                </DataTemplate>
+            </DataGrid.RowDetailsTemplate>
         </DataGrid>
     </Grid>
 </Window>
